exports[`no-collection-bracket-access > invalid(1): const map = new Map(); map[\"foo\"]; 1`] = `

  1 | const map = new Map(); map["foo"];

`;

exports[`no-collection-bracket-access > invalid(1): const map = new Map(); map[\"foo\"]; 2`] = `

Message:
> 1 | const map = new Map(); map["foo"];
    |                        ^^^^^^^^^^ Do not read from a \`Map\` using bracket notation.

`;

exports[`no-collection-bracket-access > invalid(10): const map = new Map(); map[Symbol.for(\"foo\")] = value; 1`] = `

  1 | const map = new Map(); map[Symbol.for("foo")] = value;

`;

exports[`no-collection-bracket-access > invalid(10): const map = new Map(); map[Symbol.for(\"foo\")] = value; 2`] = `

Message:
> 1 | const map = new Map(); map[Symbol.for("foo")] = value;
    |                        ^^^^^^^^^^^^^^^^^^^^^^ Do not write to a \`Map\` using bracket notation.

Suggestion 1/1: Switch to \`Map#set()\`.:
  1 | const map = new Map(); map.set(Symbol.for("foo"), value);

`;

exports[`no-collection-bracket-access > invalid(11): const map = new Map(); const key = \"foo\"; map[key]; 1`] = `

  1 | const map = new Map(); const key = "foo"; map[key];

`;

exports[`no-collection-bracket-access > invalid(11): const map = new Map(); const key = \"foo\"; map[key]; 2`] = `

Message:
> 1 | const map = new Map(); const key = "foo"; map[key];
    |                                           ^^^^^^^^ Do not read from a \`Map\` using bracket notation.

`;

exports[`no-collection-bracket-access > invalid(12): const set = new Set(); set[condition ? \"add\" : \"foo\"](\"foo\"); 1`] = `

  1 | const set = new Set(); set[condition ? "add" : "foo"]("foo");

`;

exports[`no-collection-bracket-access > invalid(12): const set = new Set(); set[condition ? \"add\" : \"foo\"](\"foo\"); 2`] = `

Message:
> 1 | const set = new Set(); set[condition ? "add" : "foo"]("foo");
    |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not read from a \`Set\` using bracket notation.

`;

exports[`no-collection-bracket-access > invalid(13): const alias = condition; var condition = true; const map = new Map(); map[alias ? \"get\" : \"foo\"](); 1`] = `

  1 | const alias = condition; var condition = true; const map = new Map(); map[alias ? "get" : "foo"]();

`;

exports[`no-collection-bracket-access > invalid(13): const alias = condition; var condition = true; const map = new Map(); map[alias ? \"get\" : \"foo\"](); 2`] = `

Message:
> 1 | const alias = condition; var condition = true; const map = new Map(); map[alias ? "get" : "foo"]();
    |                                                                       ^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not read from a \`Map\` using bracket notation.

`;

exports[`no-collection-bracket-access > invalid(14): const map = new Map(); map[+(condition ? 0 : 1)]; 1`] = `

  1 | const map = new Map(); map[+(condition ? 0 : 1)];

`;

exports[`no-collection-bracket-access > invalid(14): const map = new Map(); map[+(condition ? 0 : 1)]; 2`] = `

Message:
> 1 | const map = new Map(); map[+(condition ? 0 : 1)];
    |                        ^^^^^^^^^^^^^^^^^^^^^^^^^ Do not read from a \`Map\` using bracket notation.

`;

exports[`no-collection-bracket-access > invalid(15): const map = new Map(); map[+(condition ? \"size\" : \"get\")]; 1`] = `

  1 | const map = new Map(); map[+(condition ? "size" : "get")];

`;

exports[`no-collection-bracket-access > invalid(15): const map = new Map(); map[+(condition ? \"size\" : \"get\")]; 2`] = `

Message:
> 1 | const map = new Map(); map[+(condition ? "size" : "get")];
    |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not read from a \`Map\` using bracket notation.

`;

exports[`no-collection-bracket-access > invalid(16): const map = new Map(); map[typeof Symbol.iterator]; 1`] = `

  1 | const map = new Map(); map[typeof Symbol.iterator];

`;

exports[`no-collection-bracket-access > invalid(16): const map = new Map(); map[typeof Symbol.iterator]; 2`] = `

Message:
> 1 | const map = new Map(); map[typeof Symbol.iterator];
    |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not read from a \`Map\` using bracket notation.

`;

exports[`no-collection-bracket-access > invalid(17): const object = {value: \"iterator\"}; Object.defineProperty(object, \"value\", {get() { return \"notThere\"; }}); const map = new Map(); map[Symbol[object.value]]; 1`] = `

  1 | const object = {value: "iterator"}; Object.defineProperty(object, "value", {get() { return "notThere"; }}); const map = new Map(); map[Symbol[object.value]];

`;

exports[`no-collection-bracket-access > invalid(17): const object = {value: \"iterator\"}; Object.defineProperty(object, \"value\", {get() { return \"notThere\"; }}); const map = new Map(); map[Symbol[object.value]]; 2`] = `

Message:
> 1 | const object = {value: "iterator"}; Object.defineProperty(object, "value", {get() { return "notThere"; }}); const map = new Map(); map[Symbol[object.value]];
    |                                                                                                                                    ^^^^^^^^^^^^^^^^^^^^^^^^^ Do not read from a \`Map\` using bracket notation.

`;

exports[`no-collection-bracket-access > invalid(18): const map = new Map(); map[(0, \"foo\")]; 1`] = `

  1 | const map = new Map(); map[(0, "foo")];

`;

exports[`no-collection-bracket-access > invalid(18): const map = new Map(); map[(0, \"foo\")]; 2`] = `

Message:
> 1 | const map = new Map(); map[(0, "foo")];
    |                        ^^^^^^^^^^^^^^^ Do not read from a \`Map\` using bracket notation.

`;

exports[`no-collection-bracket-access > invalid(19): const map = new Map(); map[(0, 0)]; 1`] = `

  1 | const map = new Map(); map[(0, 0)];

`;

exports[`no-collection-bracket-access > invalid(19): const map = new Map(); map[(0, 0)]; 2`] = `

Message:
> 1 | const map = new Map(); map[(0, 0)];
    |                        ^^^^^^^^^^^ Do not read from a \`Map\` using bracket notation.

`;

exports[`no-collection-bracket-access > invalid(2): const map = new Map(); map[key]; 1`] = `

  1 | const map = new Map(); map[key];

`;

exports[`no-collection-bracket-access > invalid(2): const map = new Map(); map[key]; 2`] = `

Message:
> 1 | const map = new Map(); map[key];
    |                        ^^^^^^^^ Do not read from a \`Map\` using bracket notation.

`;

exports[`no-collection-bracket-access > invalid(20): const map = new Map(); map[\`\${prefix}foo\`]; 1`] = `

  1 | const map = new Map(); map[\`\${prefix}foo\`];

`;

exports[`no-collection-bracket-access > invalid(20): const map = new Map(); map[\`\${prefix}foo\`]; 2`] = `

Message:
> 1 | const map = new Map(); map[\`\${prefix}foo\`];
    |                        ^^^^^^^^^^^^^^^^^^^ Do not read from a \`Map\` using bracket notation.

`;

exports[`no-collection-bracket-access > invalid(21): const map = new Map(); map[\"foo\"] = \"bar\"; 1`] = `

  1 | const map = new Map(); map["foo"] = "bar";

`;

exports[`no-collection-bracket-access > invalid(21): const map = new Map(); map[\"foo\"] = \"bar\"; 2`] = `

Message:
> 1 | const map = new Map(); map["foo"] = "bar";
    |                        ^^^^^^^^^^ Do not write to a \`Map\` using bracket notation.

Suggestion 1/1: Switch to \`Map#set()\`.:
  1 | const map = new Map(); map.set("foo", "bar");

`;

exports[`no-collection-bracket-access > invalid(22): const map = new Map(); map[key] = value; 1`] = `

  1 | const map = new Map(); map[key] = value;

`;

exports[`no-collection-bracket-access > invalid(22): const map = new Map(); map[key] = value; 2`] = `

Message:
> 1 | const map = new Map(); map[key] = value;
    |                        ^^^^^^^^ Do not write to a \`Map\` using bracket notation.

Suggestion 1/1: Switch to \`Map#set()\`.:
  1 | const map = new Map(); map.set(key, value);

`;

exports[`no-collection-bracket-access > invalid(23): const weakMap = new WeakMap(); weakMap[key] = value; 1`] = `

  1 | const weakMap = new WeakMap(); weakMap[key] = value;

`;

exports[`no-collection-bracket-access > invalid(23): const weakMap = new WeakMap(); weakMap[key] = value; 2`] = `

Message:
> 1 | const weakMap = new WeakMap(); weakMap[key] = value;
    |                                ^^^^^^^^^^^^ Do not write to a \`WeakMap\` using bracket notation.

Suggestion 1/1: Switch to \`WeakMap#set()\`.:
  1 | const weakMap = new WeakMap(); weakMap.set(key, value);

`;

exports[`no-collection-bracket-access > invalid(24): const map = new Map(); map[\"foo\"] += 1; 1`] = `

  1 | const map = new Map(); map["foo"] += 1;

`;

exports[`no-collection-bracket-access > invalid(24): const map = new Map(); map[\"foo\"] += 1; 2`] = `

Message:
> 1 | const map = new Map(); map["foo"] += 1;
    |                        ^^^^^^^^^^ Do not write to a \`Map\` using bracket notation.

`;

exports[`no-collection-bracket-access > invalid(25): const map = new Map(); map[\"foo\"]++; 1`] = `

  1 | const map = new Map(); map["foo"]++;

`;

exports[`no-collection-bracket-access > invalid(25): const map = new Map(); map[\"foo\"]++; 2`] = `

Message:
> 1 | const map = new Map(); map["foo"]++;
    |                        ^^^^^^^^^^ Do not write to a \`Map\` using bracket notation.

`;

exports[`no-collection-bracket-access > invalid(26): const map = new Map(); ++map[\"foo\"]; 1`] = `

  1 | const map = new Map(); ++map["foo"];

`;

exports[`no-collection-bracket-access > invalid(26): const map = new Map(); ++map[\"foo\"]; 2`] = `

Message:
> 1 | const map = new Map(); ++map["foo"];
    |                          ^^^^^^^^^^ Do not write to a \`Map\` using bracket notation.

`;

exports[`no-collection-bracket-access > invalid(27): const map = new Map(); map[\"foo\"] ??= \"bar\"; 1`] = `

  1 | const map = new Map(); map["foo"] ??= "bar";

`;

exports[`no-collection-bracket-access > invalid(27): const map = new Map(); map[\"foo\"] ??= \"bar\"; 2`] = `

Message:
> 1 | const map = new Map(); map["foo"] ??= "bar";
    |                        ^^^^^^^^^^ Do not write to a \`Map\` using bracket notation.

`;

exports[`no-collection-bracket-access > invalid(28): const map = new Map(); [map[\"foo\"]] = array; 1`] = `

  1 | const map = new Map(); [map["foo"]] = array;

`;

exports[`no-collection-bracket-access > invalid(28): const map = new Map(); [map[\"foo\"]] = array; 2`] = `

Message:
> 1 | const map = new Map(); [map["foo"]] = array;
    |                         ^^^^^^^^^^ Do not write to a \`Map\` using bracket notation.

`;

exports[`no-collection-bracket-access > invalid(29): const map = new Map(); for (map[\"foo\"] of array) {} 1`] = `

  1 | const map = new Map(); for (map["foo"] of array) {}

`;

exports[`no-collection-bracket-access > invalid(29): const map = new Map(); for (map[\"foo\"] of array) {} 2`] = `

Message:
> 1 | const map = new Map(); for (map["foo"] of array) {}
    |                             ^^^^^^^^^^ Do not write to a \`Map\` using bracket notation.

`;

exports[`no-collection-bracket-access > invalid(3): const map = new Map(); map[0]; 1`] = `

  1 | const map = new Map(); map[0];

`;

exports[`no-collection-bracket-access > invalid(3): const map = new Map(); map[0]; 2`] = `

Message:
> 1 | const map = new Map(); map[0];
    |                        ^^^^^^ Do not read from a \`Map\` using bracket notation.

`;

exports[`no-collection-bracket-access > invalid(30): const map = new Map(); for (map[\"foo\"] in object) {} 1`] = `

  1 | const map = new Map(); for (map["foo"] in object) {}

`;

exports[`no-collection-bracket-access > invalid(30): const map = new Map(); for (map[\"foo\"] in object) {} 2`] = `

Message:
> 1 | const map = new Map(); for (map["foo"] in object) {}
    |                             ^^^^^^^^^^ Do not write to a \`Map\` using bracket notation.

`;

exports[`no-collection-bracket-access > invalid(31): const map = new Map(); map[\"foo\"] = (a, b); 1`] = `

  1 | const map = new Map(); map["foo"] = (a, b);

`;

exports[`no-collection-bracket-access > invalid(31): const map = new Map(); map[\"foo\"] = (a, b); 2`] = `

Message:
> 1 | const map = new Map(); map["foo"] = (a, b);
    |                        ^^^^^^^^^^ Do not write to a \`Map\` using bracket notation.

Suggestion 1/1: Switch to \`Map#set()\`.:
  1 | const map = new Map(); map.set("foo", (a, b));

`;

exports[`no-collection-bracket-access > invalid(32): const set = new Set(); set[\"foo\"] = 1; 1`] = `

  1 | const set = new Set(); set["foo"] = 1;

`;

exports[`no-collection-bracket-access > invalid(32): const set = new Set(); set[\"foo\"] = 1; 2`] = `

Message:
> 1 | const set = new Set(); set["foo"] = 1;
    |                        ^^^^^^^^^^ Do not write to a \`Set\` using bracket notation.

`;

exports[`no-collection-bracket-access > invalid(33): const weakSet = new WeakSet(); weakSet[key] = 1; 1`] = `

  1 | const weakSet = new WeakSet(); weakSet[key] = 1;

`;

exports[`no-collection-bracket-access > invalid(33): const weakSet = new WeakSet(); weakSet[key] = 1; 2`] = `

Message:
> 1 | const weakSet = new WeakSet(); weakSet[key] = 1;
    |                                ^^^^^^^^^^^^ Do not write to a \`WeakSet\` using bracket notation.

`;

exports[`no-collection-bracket-access > invalid(34): const map = new Map(); delete map[\"foo\"]; 1`] = `

  1 | const map = new Map(); delete map["foo"];

`;

exports[`no-collection-bracket-access > invalid(34): const map = new Map(); delete map[\"foo\"]; 2`] = `

Message:
> 1 | const map = new Map(); delete map["foo"];
    |                               ^^^^^^^^^^ Do not delete from a \`Map\` using bracket notation.

Suggestion 1/1: Switch to \`Map#delete()\`.:
  1 | const map = new Map(); map.delete("foo");

`;

exports[`no-collection-bracket-access > invalid(35): const set = new Set(); delete set[\"foo\"]; 1`] = `

  1 | const set = new Set(); delete set["foo"];

`;

exports[`no-collection-bracket-access > invalid(35): const set = new Set(); delete set[\"foo\"]; 2`] = `

Message:
> 1 | const set = new Set(); delete set["foo"];
    |                               ^^^^^^^^^^ Do not delete from a \`Set\` using bracket notation.

Suggestion 1/1: Switch to \`Set#delete()\`.:
  1 | const set = new Set(); set.delete("foo");

`;

exports[`no-collection-bracket-access > invalid(36): const weakMap = new WeakMap(); delete weakMap[key]; 1`] = `

  1 | const weakMap = new WeakMap(); delete weakMap[key];

`;

exports[`no-collection-bracket-access > invalid(36): const weakMap = new WeakMap(); delete weakMap[key]; 2`] = `

Message:
> 1 | const weakMap = new WeakMap(); delete weakMap[key];
    |                                       ^^^^^^^^^^^^ Do not delete from a \`WeakMap\` using bracket notation.

Suggestion 1/1: Switch to \`WeakMap#delete()\`.:
  1 | const weakMap = new WeakMap(); weakMap.delete(key);

`;

exports[`no-collection-bracket-access > invalid(37): const map = new Map(); map?.[\"foo\"]; 1`] = `

  1 | const map = new Map(); map?.["foo"];

`;

exports[`no-collection-bracket-access > invalid(37): const map = new Map(); map?.[\"foo\"]; 2`] = `

Message:
> 1 | const map = new Map(); map?.["foo"];
    |                        ^^^^^^^^^^^^ Do not read from a \`Map\` using bracket notation.

`;

exports[`no-collection-bracket-access > invalid(38): const map = new Map(); delete map?.[\"foo\"]; 1`] = `

  1 | const map = new Map(); delete map?.["foo"];

`;

exports[`no-collection-bracket-access > invalid(38): const map = new Map(); delete map?.[\"foo\"]; 2`] = `

Message:
> 1 | const map = new Map(); delete map?.["foo"];
    |                               ^^^^^^^^^^^^ Do not delete from a \`Map\` using bracket notation.

`;

exports[`no-collection-bracket-access > invalid(39): const map = new Map(); const x = (map[\"foo\"] = \"bar\"); 1`] = `

  1 | const map = new Map(); const x = (map["foo"] = "bar");

`;

exports[`no-collection-bracket-access > invalid(39): const map = new Map(); const x = (map[\"foo\"] = \"bar\"); 2`] = `

Message:
> 1 | const map = new Map(); const x = (map["foo"] = "bar");
    |                                   ^^^^^^^^^^ Do not write to a \`Map\` using bracket notation.

`;

exports[`no-collection-bracket-access > invalid(4): const map = new Map(); const value = map[\"foo\"]; 1`] = `

  1 | const map = new Map(); const value = map["foo"];

`;

exports[`no-collection-bracket-access > invalid(4): const map = new Map(); const value = map[\"foo\"]; 2`] = `

Message:
> 1 | const map = new Map(); const value = map["foo"];
    |                                      ^^^^^^^^^^ Do not read from a \`Map\` using bracket notation.

`;

exports[`no-collection-bracket-access > invalid(40): const map = new Map(); if (delete map[\"foo\"]) {} 1`] = `

  1 | const map = new Map(); if (delete map["foo"]) {}

`;

exports[`no-collection-bracket-access > invalid(40): const map = new Map(); if (delete map[\"foo\"]) {} 2`] = `

Message:
> 1 | const map = new Map(); if (delete map["foo"]) {}
    |                                   ^^^^^^^^^^ Do not delete from a \`Map\` using bracket notation.

`;

exports[`no-collection-bracket-access > invalid(41): const map = new Map(); (cond ? map : map)[\"foo\"] = \"bar\"; 1`] = `

  1 | const map = new Map(); (cond ? map : map)["foo"] = "bar";

`;

exports[`no-collection-bracket-access > invalid(41): const map = new Map(); (cond ? map : map)[\"foo\"] = \"bar\"; 2`] = `

Message:
> 1 | const map = new Map(); (cond ? map : map)["foo"] = "bar";
    |                        ^^^^^^^^^^^^^^^^^^^^^^^^^ Do not write to a \`Map\` using bracket notation.

`;

exports[`no-collection-bracket-access > invalid(42): const map = new Map(); map[\"foo\"] = /* keep */ \"bar\"; 1`] = `

  1 | const map = new Map(); map["foo"] = /* keep */ "bar";

`;

exports[`no-collection-bracket-access > invalid(42): const map = new Map(); map[\"foo\"] = /* keep */ \"bar\"; 2`] = `

Message:
> 1 | const map = new Map(); map["foo"] = /* keep */ "bar";
    |                        ^^^^^^^^^^ Do not write to a \`Map\` using bracket notation.

`;

exports[`no-collection-bracket-access > invalid(43): const map = new Map(); (map)[\"foo\"]; 1`] = `

  1 | const map = new Map(); (map)["foo"];

`;

exports[`no-collection-bracket-access > invalid(43): const map = new Map(); (map)[\"foo\"]; 2`] = `

Message:
> 1 | const map = new Map(); (map)["foo"];
    |                        ^^^^^^^^^^^^ Do not read from a \`Map\` using bracket notation.

`;

exports[`no-collection-bracket-access > invalid(44): const map = new Map(); map[\"foo\"].bar; 1`] = `

  1 | const map = new Map(); map["foo"].bar;

`;

exports[`no-collection-bracket-access > invalid(44): const map = new Map(); map[\"foo\"].bar; 2`] = `

Message:
> 1 | const map = new Map(); map["foo"].bar;
    |                        ^^^^^^^^^^ Do not read from a \`Map\` using bracket notation.

`;

exports[`no-collection-bracket-access > invalid(45): const map = new Map(); const key = new Map(); map[key[\"foo\"]]; 1`] = `

  1 | const map = new Map(); const key = new Map(); map[key["foo"]];

`;

exports[`no-collection-bracket-access > invalid(45): const map = new Map(); const key = new Map(); map[key[\"foo\"]]; 2`] = `

Message:
> 1 | const map = new Map(); const key = new Map(); map[key["foo"]];
    |                                               ^^^^^^^^^^^^^^^ Do not read from a \`Map\` using bracket notation.

`;

exports[`no-collection-bracket-access > invalid(45): const map = new Map(); const key = new Map(); map[key[\"foo\"]]; 3`] = `

Message:
> 1 | const map = new Map(); const key = new Map(); map[key["foo"]];
    |                                                   ^^^^^^^^^^ Do not read from a \`Map\` using bracket notation.

`;

exports[`no-collection-bracket-access > invalid(46): const map = new Map(); (delete map[\"foo\"], 1); 1`] = `

  1 | const map = new Map(); (delete map["foo"], 1);

`;

exports[`no-collection-bracket-access > invalid(46): const map = new Map(); (delete map[\"foo\"], 1); 2`] = `

Message:
> 1 | const map = new Map(); (delete map["foo"], 1);
    |                                ^^^^^^^^^^ Do not delete from a \`Map\` using bracket notation.

`;

exports[`no-collection-bracket-access > invalid(47): new Map()[\"foo\"] = \"bar\"; 1`] = `

  1 | new Map()["foo"] = "bar";

`;

exports[`no-collection-bracket-access > invalid(47): new Map()[\"foo\"] = \"bar\"; 2`] = `

Message:
> 1 | new Map()["foo"] = "bar";
    | ^^^^^^^^^^^^^^^^ Do not write to a \`Map\` using bracket notation.

`;

exports[`no-collection-bracket-access > invalid(48): function foo(map: Map<string, number>) { return map[\"foo\"]; } 1`] = `

  1 | function foo(map: Map<string, number>) { return map["foo"]; }

`;

exports[`no-collection-bracket-access > invalid(48): function foo(map: Map<string, number>) { return map[\"foo\"]; } 2`] = `

Message:
> 1 | function foo(map: Map<string, number>) { return map["foo"]; }
    |                                                 ^^^^^^^^^^ Do not read from a \`Map\` using bracket notation.

`;

exports[`no-collection-bracket-access > invalid(49): function foo(map: Map<string, number>) { map[\"foo\"] = 1; } 1`] = `

  1 | function foo(map: Map<string, number>) { map["foo"] = 1; }

`;

exports[`no-collection-bracket-access > invalid(49): function foo(map: Map<string, number>) { map[\"foo\"] = 1; } 2`] = `

Message:
> 1 | function foo(map: Map<string, number>) { map["foo"] = 1; }
    |                                          ^^^^^^^^^^ Do not write to a \`Map\` using bracket notation.

Suggestion 1/1: Switch to \`Map#set()\`.:
  1 | function foo(map: Map<string, number>) { map.set("foo", 1); }

`;

exports[`no-collection-bracket-access > invalid(5): const map = new Map(); if (map[\"foo\"]) {} 1`] = `

  1 | const map = new Map(); if (map["foo"]) {}

`;

exports[`no-collection-bracket-access > invalid(5): const map = new Map(); if (map[\"foo\"]) {} 2`] = `

Message:
> 1 | const map = new Map(); if (map["foo"]) {}
    |                            ^^^^^^^^^^ Do not read from a \`Map\` using bracket notation.

`;

exports[`no-collection-bracket-access > invalid(50): declare const map: Map<string, number>; (map as Map<string, number>)[\"foo\"]; 1`] = `

  1 | declare const map: Map<string, number>; (map as Map<string, number>)["foo"];

`;

exports[`no-collection-bracket-access > invalid(50): declare const map: Map<string, number>; (map as Map<string, number>)[\"foo\"]; 2`] = `

Message:
> 1 | declare const map: Map<string, number>; (map as Map<string, number>)["foo"];
    |                                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not read from a \`Map\` using bracket notation.

`;

exports[`no-collection-bracket-access > invalid(51): declare const map: Map<string, number>; map![\"foo\"]; 1`] = `

  1 | declare const map: Map<string, number>; map!["foo"];

`;

exports[`no-collection-bracket-access > invalid(51): declare const map: Map<string, number>; map![\"foo\"]; 2`] = `

Message:
> 1 | declare const map: Map<string, number>; map!["foo"];
    |                                         ^^^^^^^^^^^ Do not read from a \`Map\` using bracket notation.

`;

exports[`no-collection-bracket-access > invalid(52): function foo(cache: {map: Map<string, number>}) { cache.map[\"foo\"] = 1; } 1`] = `

Filename: file.ts

  1 | function foo(cache: {map: Map<string, number>}) { cache.map["foo"] = 1; }

`;

exports[`no-collection-bracket-access > invalid(52): function foo(cache: {map: Map<string, number>}) { cache.map[\"foo\"] = 1; } 2`] = `

Message:
> 1 | function foo(cache: {map: Map<string, number>}) { cache.map["foo"] = 1; }
    |                                                   ^^^^^^^^^^^^^^^^ Do not write to a \`Map\` using bracket notation.

Suggestion 1/1: Switch to \`Map#set()\`.:
  1 | function foo(cache: {map: Map<string, number>}) { cache.map.set("foo", 1); }

`;

exports[`no-collection-bracket-access > invalid(53): function foo(set: Set<string>) { set[\"foo\"] = 1; } 1`] = `

Filename: file.ts

  1 | function foo(set: Set<string>) { set["foo"] = 1; }

`;

exports[`no-collection-bracket-access > invalid(53): function foo(set: Set<string>) { set[\"foo\"] = 1; } 2`] = `

Message:
> 1 | function foo(set: Set<string>) { set["foo"] = 1; }
    |                                  ^^^^^^^^^^ Do not write to a \`Set\` using bracket notation.

`;

exports[`no-collection-bracket-access > invalid(54): const map = new Map(); map[key || \"get\"]; 1`] = `

  1 | const map = new Map(); map[key || "get"];

`;

exports[`no-collection-bracket-access > invalid(54): const map = new Map(); map[key || \"get\"]; 2`] = `

Message:
> 1 | const map = new Map(); map[key || "get"];
    |                        ^^^^^^^^^^^^^^^^^ Do not read from a \`Map\` using bracket notation.

`;

exports[`no-collection-bracket-access > invalid(6): const set = new Set(); set[\"foo\"]; 1`] = `

  1 | const set = new Set(); set["foo"];

`;

exports[`no-collection-bracket-access > invalid(6): const set = new Set(); set[\"foo\"]; 2`] = `

Message:
> 1 | const set = new Set(); set["foo"];
    |                        ^^^^^^^^^^ Do not read from a \`Set\` using bracket notation.

`;

exports[`no-collection-bracket-access > invalid(7): const weakMap = new WeakMap(); weakMap[key]; 1`] = `

  1 | const weakMap = new WeakMap(); weakMap[key];

`;

exports[`no-collection-bracket-access > invalid(7): const weakMap = new WeakMap(); weakMap[key]; 2`] = `

Message:
> 1 | const weakMap = new WeakMap(); weakMap[key];
    |                                ^^^^^^^^^^^^ Do not read from a \`WeakMap\` using bracket notation.

`;

exports[`no-collection-bracket-access > invalid(8): const weakSet = new WeakSet(); weakSet[key]; 1`] = `

  1 | const weakSet = new WeakSet(); weakSet[key];

`;

exports[`no-collection-bracket-access > invalid(8): const weakSet = new WeakSet(); weakSet[key]; 2`] = `

Message:
> 1 | const weakSet = new WeakSet(); weakSet[key];
    |                                ^^^^^^^^^^^^ Do not read from a \`WeakSet\` using bracket notation.

`;

exports[`no-collection-bracket-access > invalid(9): const map = new Map(); const symbol = Symbol(\"x\"); map[symbol]; 1`] = `

  1 | const map = new Map(); const symbol = Symbol("x"); map[symbol];

`;

exports[`no-collection-bracket-access > invalid(9): const map = new Map(); const symbol = Symbol(\"x\"); map[symbol]; 2`] = `

Message:
> 1 | const map = new Map(); const symbol = Symbol("x"); map[symbol];
    |                                                    ^^^^^^^^^^^ Do not read from a \`Map\` using bracket notation.

`;
